--- a/acfun.scss
+++ b/acfun.scss
@@ -139,28 +139,42 @@ header {
         background-size: cover;
     }
     nav {
+        position: relative;
         height: 46px;
         border-bottom: 1px solid #eee;
         ul {
-            display: flex;
             position: relative;
-            align-items: center;
             margin: 0 auto;
             width: 980px;
             height: 100%;
             font-size: 14px;
             color: #333;
-            li {
-                margin-right: 34px;
-            }
-            li:first-of-type {
-                margin-left: 4px;
+            >li {
+                float: left;
+                padding: 14px 4px 12px 4px;
+                margin-right: 26px;
+                position: relative;
+                ul {
+                    position: absolute;
+                    z-index: 5;
+                    display: none;
+                    top: 100%;
+                    li {
+                        float: left;
+                        padding: 14px 8px 12px 0;
+                        margin-right: 26px;
+                    }
+                }
             }
             li:hover {
                 color: $theme-red;
+                ul {
+                    display: block;
+                }
             }
             .active {
                 color: $theme-red;
+                border-bottom: 3px solid $theme-red;
             }
             .rank {
                 margin-right: 0;
@@ -172,15 +186,17 @@ header {
                     vertical-align: middle;
                 }
             }
-            .line {
-                position: absolute;
-                width: 40px;
-                left: 0;
-                bottom: 0;
-                height: 3px;
-                margin: 0;
-                background-color: $theme-red;
-            }
+        }
+        .moreGroupBg {
+            position: absolute;
+            display: none;
+            z-index: 1;
+            top: 100%;
+            height: 100%;
+            width: 100%;
+            background-color: rgba(#fff, 0.3);
+            border-bottom: 1px solid #eee;
+            box-shadow: 0px 1px #eee;
         }
     }
 }
