--- a/acfun.scss
+++ b/acfun.scss
@@ -34,6 +34,11 @@ input {
     clear: both;
 }
 
+.center {
+    width: 980px;
+    margin: 0 auto;
+}
+
 header {
     .wrap {
         position: fixed;
@@ -194,11 +199,56 @@ header {
             top: 100%;
             height: 100%;
             width: 100%;
-            background-color: rgba(#fff, 0.3);
+            background-color: #f8f8f8;
+            opacity: 0.9;
             border-bottom: 1px solid #eee;
             box-shadow: 0px 1px #eee;
         }
     }
 }
 
-main {}
+main {
+    .carouselAndVideo {
+        margin-top: 10px;
+        .carousel-container {
+            position: relative;
+            width: 508px;
+            height: 260px;
+            overflow: hidden;
+            .carousel {
+                position: absolute;
+                width: 5*508px;
+                left: 0;
+                li {
+                    float: left;
+                    position: relative;
+                    .videoIntro {
+                        position: absolute;
+                        bottom: 10px;
+                        left: 10px;
+                        color: #fff;
+                    }
+                }
+            }
+            .bullet {
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+                li {
+                    float: left;
+                    margin-right: 10px;
+                    width: 8px;
+                    height: 8px;
+                    background-color: #fff;
+                    border-radius: 50%;
+                    cursor: pointer;
+                }
+                .active {
+                    width: 16px;
+                    border-radius: 4px;
+                    background-color: $theme-red;
+                }
+            }
+        }
+    }
+}
