--- a/acfun.scss
+++ b/acfun.scss
@@ -212,6 +212,7 @@ main {
         margin-top: 10px;
         .carousel-container {
             position: relative;
+            float: left;
             width: 508px;
             height: 260px;
             overflow: hidden;
@@ -247,6 +248,60 @@ main {
                     width: 16px;
                     border-radius: 4px;
                     background-color: $theme-red;
+                }
+            }
+        }
+        .video {
+            float: right;
+            margin-left: 20px;
+            margin-right: -20px;
+            width: 472px;
+            height: 280px;
+            .videoList {
+                width: 100%;
+                li {
+                    position: relative;
+                    float: left;
+                    margin-right: 20px;
+                    margin-bottom: 20px;
+                    >a {
+                        img {
+                            vertical-align: middle; //消除inline-block的缝隙
+                            width: 216px;
+                            height: 120px;
+                        }
+                    }
+                    >p {
+                        position: absolute;
+                        bottom: 10px;
+                        left: 10px;
+                        color: #fff;
+                    }
+                    .videoIntro {
+                        position: absolute;
+                        display: none;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        padding: 10px;
+                        box-sizing: border-box;
+                        background-color: rgba(0, 0, 0, 0.7);
+                        h4 {
+                            margin-bottom: 50px;
+                            color: #fff;
+                        }
+                        p {
+                            color: #fff;
+                        }
+                        span {
+                            margin-right: 30px;
+                            color: #fff;
+                            b {
+                                font-size: 12px;
+                            }
+                        }
+                    }
                 }
             }
         }
