--- a/acfun.scss
+++ b/acfun.scss
@@ -187,6 +187,7 @@ header {
                 top: 50%;
                 transform: translateY(-50%);
                 right: 0;
+                cursor: pointer;
                 i {
                     vertical-align: middle;
                 }
