--- a/acfun.css
+++ b/acfun.css
@@ -3,7 +3,8 @@
   padding: 0; }
 
 body {
-  font-size: 12px; }
+  font-size: 12px;
+  color: #333; }
 
 ul,
 li {
@@ -12,6 +13,15 @@ li {
 a {
   color: inherit;
   text-decoration: none; }
+
+b,
+h2,
+h4,
+h5 {
+  font-weight: normal; }
+
+i {
+  font-style: normal; }
 
 button {
   border-style: none; }
@@ -163,31 +173,31 @@ header nav {
     border-bottom: 1px solid #eee;
     box-shadow: 0px 1px #eee; }
 
-main .carouselAndVideo {
+.carouselAndVideo {
   margin-top: 10px; }
-  main .carouselAndVideo .carousel-container {
+  .carouselAndVideo .carousel-container {
     position: relative;
     float: left;
     width: 508px;
     height: 260px;
     overflow: hidden; }
-    main .carouselAndVideo .carousel-container .carousel {
+    .carouselAndVideo .carousel-container .carousel {
       position: absolute;
       width: 2540px;
       left: 0; }
-      main .carouselAndVideo .carousel-container .carousel li {
+      .carouselAndVideo .carousel-container .carousel li {
         float: left;
         position: relative; }
-        main .carouselAndVideo .carousel-container .carousel li .videoIntro {
+        .carouselAndVideo .carousel-container .carousel li .videoIntro {
           position: absolute;
           bottom: 10px;
           left: 10px;
           color: #fff; }
-    main .carouselAndVideo .carousel-container .bullet {
+    .carouselAndVideo .carousel-container .bullet {
       position: absolute;
       bottom: 10px;
       right: 10px; }
-      main .carouselAndVideo .carousel-container .bullet li {
+      .carouselAndVideo .carousel-container .bullet li {
         float: left;
         margin-right: 10px;
         width: 8px;
@@ -195,33 +205,33 @@ main .carouselAndVideo {
         background-color: #fff;
         border-radius: 50%;
         cursor: pointer; }
-      main .carouselAndVideo .carousel-container .bullet .active {
+      .carouselAndVideo .carousel-container .bullet .active {
         width: 16px;
         border-radius: 4px;
         background-color: #f84962; }
-  main .carouselAndVideo .video {
+  .carouselAndVideo .video {
     float: right;
     margin-left: 20px;
     margin-right: -20px;
     width: 472px;
     height: 280px; }
-    main .carouselAndVideo .video .videoList {
+    .carouselAndVideo .video .videoList {
       width: 100%; }
-      main .carouselAndVideo .video .videoList li {
+      .carouselAndVideo .video .videoList li {
         position: relative;
         float: left;
         margin-right: 20px;
         margin-bottom: 20px; }
-        main .carouselAndVideo .video .videoList li > a img {
+        .carouselAndVideo .video .videoList li > a img {
           vertical-align: middle;
           width: 216px;
           height: 120px; }
-        main .carouselAndVideo .video .videoList li > p {
+        .carouselAndVideo .video .videoList li > p {
           position: absolute;
-          bottom: 10px;
-          left: 10px;
+          bottom: 5px;
+          left: 5px;
           color: #fff; }
-        main .carouselAndVideo .video .videoList li .videoIntro {
+        .carouselAndVideo .video .videoList li .videoIntro {
           position: absolute;
           display: none;
           top: 0;
@@ -231,15 +241,197 @@ main .carouselAndVideo {
           padding: 10px;
           box-sizing: border-box;
           background-color: rgba(0, 0, 0, 0.7); }
-          main .carouselAndVideo .video .videoList li .videoIntro h4 {
+          .carouselAndVideo .video .videoList li .videoIntro h4 {
             margin-bottom: 50px;
             color: #fff; }
-          main .carouselAndVideo .video .videoList li .videoIntro p {
+          .carouselAndVideo .video .videoList li .videoIntro p {
             color: #fff; }
-          main .carouselAndVideo .video .videoList li .videoIntro span {
+          .carouselAndVideo .video .videoList li .videoIntro span {
             margin-right: 30px;
             color: #fff; }
-            main .carouselAndVideo .video .videoList li .videoIntro span b {
+            .carouselAndVideo .video .videoList li .videoIntro span b {
               font-size: 12px; }
+
+.monkey-recommend {
+  margin-top: 20px; }
+  .monkey-recommend h2 {
+    margin-bottom: 10px; }
+    .monkey-recommend h2 img {
+      width: 40px;
+      vertical-align: middle; }
+    .monkey-recommend h2 i {
+      font-style: inherit;
+      margin-left: 5px; }
+    .monkey-recommend h2 b {
+      margin-left: 10px;
+      font-weight: normal;
+      font-size: 12px;
+      color: #9c9999; }
+  .monkey-recommend .monkey-recommend-video .recommendVideoList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 980px; }
+    .monkey-recommend .monkey-recommend-video .recommendVideoList li img {
+      width: 160px;
+      height: 90px; }
+    .monkey-recommend .monkey-recommend-video .recommendVideoList li span {
+      color: #9c9999; }
+    .monkey-recommend .monkey-recommend-video .recommendVideoList li a:hover {
+      color: #f84962; }
+      .monkey-recommend .monkey-recommend-video .recommendVideoList li a:hover span:hover {
+        color: #f84962; }
+    .monkey-recommend .monkey-recommend-video .recommendVideoList li:last-of-type img {
+      width: 260px;
+      height: 128px; }
+
+.banna-rank {
+  margin-top: 20px; }
+  .banna-rank .column-left {
+    float: left;
+    position: relative;
+    margin-top: 20px;
+    width: 700px; }
+    .banna-rank .column-left li {
+      font-weight: normal; }
+    .banna-rank .column-left h2 {
+      box-sizing: border-box;
+      width: 700px;
+      margin-bottom: 10px; }
+      .banna-rank .column-left h2 img {
+        width: 40px;
+        vertical-align: middle; }
+      .banna-rank .column-left h2 i {
+        font-style: inherit;
+        margin-left: 5px; }
+      .banna-rank .column-left h2 b {
+        margin-left: 10px;
+        font-weight: normal;
+        font-size: 12px;
+        color: #9c9999; }
+    .banna-rank .column-left .rank-type {
+      position: absolute;
+      right: 0;
+      top: 0; }
+      .banna-rank .column-left .rank-type li {
+        float: right;
+        line-height: 22px;
+        padding: 2px 10px;
+        height: 22px;
+        margin-right: 10px;
+        cursor: pointer; }
+      .banna-rank .column-left .rank-type .active {
+        color: #f84962;
+        background-color: #f8e7e8; }
+    .banna-rank .column-left .video-list {
+      display: none;
+      margin-left: -20px;
+      margin-top: -20px; }
+      .banna-rank .column-left .video-list li {
+        float: left;
+        position: relative;
+        margin-left: 20px;
+        margin-top: 20px;
+        width: 160px;
+        font-weight: normal; }
+        .banna-rank .column-left .video-list li a img {
+          width: 160px;
+          height: 90px;
+          vertical-align: top; }
+        .banna-rank .column-left .video-list li a h4 {
+          height: 20px;
+          overflow: hidden;
+          margin-top: 5px; }
+        .banna-rank .column-left .video-list li a h4:hover {
+          color: #f84962; }
+        .banna-rank .column-left .video-list li a span {
+          float: left;
+          width: 106px;
+          margin-top: 4px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color: #9c9999; }
+        .banna-rank .column-left .video-list li a span:hover {
+          color: #f84962; }
+        .banna-rank .column-left .video-list li a i {
+          margin-top: 2px;
+          float: right;
+          width: 54px;
+          text-align: right;
+          color: #f9bc00; }
+    .banna-rank .column-left .active {
+      display: block; }
+    .banna-rank .column-left .guided-vision {
+      margin-top: 20px;
+      overflow: hidden; }
+  .banna-rank .column-right {
+    float: right;
+    width: 260px;
+    margin-top: 20px; }
+    .banna-rank .column-right img {
+      width: 40px;
+      vertical-align: middle; }
+    .banna-rank .column-right .article-type {
+      margin-top: 7px;
+      display: flex;
+      justify-content: space-around; }
+      .banna-rank .column-right .article-type li {
+        float: left;
+        padding-bottom: 8px;
+        border-bottom: 1px solid #fff; }
+      .banna-rank .column-right .article-type li.active {
+        color: #2ab69d;
+        border-color: #2ab69d; }
+    .banna-rank .column-right .article-list {
+      position: relative;
+      height: 380px;
+      margin-top: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      .banna-rank .column-right .article-list li {
+        display: none; }
+      .banna-rank .column-right .article-list img {
+        float: left;
+        width: 90px;
+        height: 50px;
+        margin-right: 20px; }
+      .banna-rank .column-right .article-list .article-img-intro {
+        margin-bottom: 10px; }
+        .banna-rank .column-right .article-list .article-img-intro span {
+          color: #9c9999; }
+        .banna-rank .column-right .article-list .article-img-intro h5:hover,
+        .banna-rank .column-right .article-list .article-img-intro a:hover {
+          color: #2ab69d; }
+        .banna-rank .column-right .article-list .article-img-intro .up {
+          float: left; }
+        .banna-rank .column-right .article-list .article-img-intro i {
+          float: right;
+          vertical-align: bottom;
+          font-size: 12px;
+          color: #9c9999; }
+      .banna-rank .column-right .article-list .active {
+        display: block; }
+      .banna-rank .column-right .article-list p + p {
+        margin-top: 13px; }
+      .banna-rank .column-right .article-list p {
+        overflow: hidden;
+        height: 16px;
+        line-height: 20px; }
+      .banna-rank .column-right .article-list p:hover {
+        color: #2ab69d; }
+      .banna-rank .column-right .article-list .view-more {
+        position: absolute;
+        bottom: 0;
+        display: inline-block;
+        height: 28px;
+        width: 260px;
+        line-height: 28px;
+        text-align: center;
+        border-radius: 4px;
+        background-color: #e2e2e2; }
+      .banna-rank .column-right .article-list .view-more:hover {
+        background-color: #e4e4e4; }
 
 /*# sourceMappingURL=acfun.css.map */
