--- a/acfun.scss
+++ b/acfun.scss
@@ -1,13 +1,17 @@
 * {
     margin: 0;
     padding: 0;
+    // border: 1px solid;
 }
 
 $theme-red: rgb(248, 73, 98);
 $theme-grey: rgb(226, 226, 226);
+$theme-grey2: rgb(156, 153, 153);
 $font-grey: #999;
+$theme-green: #2ab69d;
 body {
     font-size: 12px;
+    color: #333;
 }
 
 ul,
@@ -18,6 +22,17 @@ li {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+b,
+h2,
+h4,
+h5 {
+    font-weight: normal;
+}
+
+i {
+    font-style: normal;
 }
 
 button {
@@ -39,6 +54,17 @@ input {
     margin: 0 auto;
 }
 
+// .column-left {
+//     position: relative;
+//     margin-top: 20px;
+//     width: 700px;
+// }
+// .column-right {
+//     float: right;
+//     position: absolute;
+//     margin-left: 20px;
+//     width: 260px;
+// }
 header {
     .wrap {
         position: fixed;
@@ -208,99 +234,98 @@ header {
     }
 }
 
-main {
-    .carouselAndVideo {
-        margin-top: 10px;
-        .carousel-container {
-            position: relative;
-            float: left;
-            width: 508px;
-            height: 260px;
-            overflow: hidden;
-            .carousel {
-                position: absolute;
-                width: 5*508px;
-                left: 0;
-                li {
-                    float: left;
-                    position: relative;
-                    .videoIntro {
-                        position: absolute;
-                        bottom: 10px;
-                        left: 10px;
-                        color: #fff;
-                    }
-                }
-            }
-            .bullet {
-                position: absolute;
-                bottom: 10px;
-                right: 10px;
-                li {
-                    float: left;
-                    margin-right: 10px;
-                    width: 8px;
-                    height: 8px;
-                    background-color: #fff;
-                    border-radius: 50%;
-                    cursor: pointer;
-                }
-                .active {
-                    width: 16px;
-                    border-radius: 4px;
-                    background-color: $theme-red;
+// main {
+.carouselAndVideo {
+    margin-top: 10px;
+    .carousel-container {
+        position: relative;
+        float: left;
+        width: 508px;
+        height: 260px;
+        overflow: hidden;
+        .carousel {
+            position: absolute;
+            width: 5*508px;
+            left: 0;
+            li {
+                float: left;
+                position: relative;
+                .videoIntro {
+                    position: absolute;
+                    bottom: 10px;
+                    left: 10px;
+                    color: #fff;
                 }
             }
         }
-        .video {
-            float: right;
-            margin-left: 20px;
-            margin-right: -20px;
-            width: 472px;
-            height: 280px;
-            .videoList {
-                width: 100%;
-                li {
-                    position: relative;
-                    float: left;
-                    margin-right: 20px;
-                    margin-bottom: 20px;
-                    >a {
-                        img {
-                            vertical-align: middle; //消除inline-block的缝隙
-                            width: 216px;
-                            height: 120px;
-                        }
+        .bullet {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            li {
+                float: left;
+                margin-right: 10px;
+                width: 8px;
+                height: 8px;
+                background-color: #fff;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+            .active {
+                width: 16px;
+                border-radius: 4px;
+                background-color: $theme-red;
+            }
+        }
+    }
+    .video {
+        float: right;
+        margin-left: 20px;
+        margin-right: -20px;
+        width: 472px;
+        height: 280px;
+        .videoList {
+            width: 100%;
+            li {
+                position: relative;
+                float: left;
+                margin-right: 20px;
+                margin-bottom: 20px;
+                >a {
+                    img {
+                        vertical-align: middle; //消除inline-block的缝隙
+                        width: 216px;
+                        height: 120px;
                     }
-                    >p {
-                        position: absolute;
-                        bottom: 10px;
-                        left: 10px;
+                }
+                >p {
+                    position: absolute;
+                    bottom: 5px;
+                    left: 5px;
+                    color: #fff;
+                }
+                .videoIntro {
+                    position: absolute;
+                    display: none;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    padding: 10px;
+                    box-sizing: border-box;
+                    background-color: rgba(0, 0, 0, 0.7);
+                    h4 {
+                        margin-bottom: 50px;
                         color: #fff;
                     }
-                    .videoIntro {
-                        position: absolute;
-                        display: none;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        padding: 10px;
-                        box-sizing: border-box;
-                        background-color: rgba(0, 0, 0, 0.7);
-                        h4 {
-                            margin-bottom: 50px;
-                            color: #fff;
-                        }
-                        p {
-                            color: #fff;
-                        }
-                        span {
-                            margin-right: 30px;
-                            color: #fff;
-                            b {
-                                font-size: 12px;
-                            }
+                    p {
+                        color: #fff;
+                    }
+                    span {
+                        margin-right: 30px;
+                        color: #fff;
+                        b {
+                            font-size: 12px;
                         }
                     }
                 }
@@ -308,3 +333,245 @@ main {
         }
     }
 }
+
+.monkey-recommend {
+    margin-top: 20px;
+    h2 {
+        img {
+            width: 40px;
+            vertical-align: middle;
+        }
+        i {
+            font-style: inherit;
+            margin-left: 5px;
+        }
+        b {
+            margin-left: 10px;
+            font-weight: normal;
+            font-size: 12px;
+            color: $theme-grey2;
+        }
+        margin-bottom: 10px;
+    }
+    .monkey-recommend-video {
+        .recommendVideoList {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            width: 980px;
+            li {
+                img {
+                    width: 160px;
+                    height: 90px;
+                }
+                span {
+                    color: $theme-grey2;
+                }
+                a:hover {
+                    color: $theme-red;
+                    span:hover {
+                        color: $theme-red;
+                    }
+                }
+            }
+            li:last-of-type {
+                img {
+                    width: 260px;
+                    height: 128px;
+                }
+            }
+        }
+    }
+}
+
+.banna-rank {
+    margin-top: 20px;
+    .column-left {
+        li {
+            font-weight: normal;
+        }
+        float: left;
+        position: relative;
+        margin-top: 20px;
+        width: 700px;
+        h2 {
+            box-sizing: border-box;
+            width: 700px;
+            margin-bottom: 10px;
+            img {
+                width: 40px;
+                vertical-align: middle;
+            }
+            i {
+                font-style: inherit;
+                margin-left: 5px;
+            }
+            b {
+                margin-left: 10px;
+                font-weight: normal;
+                font-size: 12px;
+                color: $theme-grey2;
+            }
+        }
+        .rank-type {
+            position: absolute;
+            right: 0;
+            top: 0;
+            li {
+                float: right;
+                line-height: 22px;
+                padding: 2px 10px;
+                height: 22px;
+                margin-right: 10px;
+                cursor: pointer;
+            }
+            .active {
+                color: $theme-red;
+                background-color: rgb(248, 231, 232);
+            }
+        }
+        .video-list {
+            display: none;
+            margin-left: -20px;
+            margin-top: -20px;
+            li {
+                float: left;
+                position: relative;
+                margin-left: 20px;
+                margin-top: 20px;
+                width: 160px;
+                font-weight: normal;
+                a {
+                    img {
+                        width: 160px;
+                        height: 90px;
+                        vertical-align: top;
+                    }
+                    h4 {
+                        height: 20px;
+                        overflow: hidden;
+                        margin-top: 5px;
+                    }
+                    h4:hover {
+                        color: $theme-red;
+                    }
+                    span {
+                        float: left;
+                        width: 106px;
+                        margin-top: 4px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        color: $theme-grey2;
+                    }
+                    span:hover {
+                        color: $theme-red;
+                    }
+                    i {
+                        margin-top: 2px;
+                        float: right;
+                        width: 54px;
+                        text-align: right;
+                        color: #f9bc00;
+                    }
+                }
+            }
+        }
+        .active {
+            display: block;
+        }
+        .guided-vision {
+            margin-top: 20px;
+            overflow: hidden;
+        }
+    }
+    .column-right {
+        float: right;
+        width: 260px;
+        margin-top: 20px;
+        img {
+            width: 40px;
+            vertical-align: middle;
+        }
+        .article-type {
+            margin-top: 7px;
+            display: flex;
+            justify-content: space-around;
+            li {
+                float: left;
+                padding-bottom: 8px;
+                border-bottom: 1px solid #fff;
+            }
+            li.active {
+                color: $theme-green;
+                border-color: $theme-green;
+            }
+        }
+        .article-list {
+            li {
+                display: none;
+            }
+            position: relative;
+            height: 380px;
+            margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            img {
+                float: left;
+                width: 90px;
+                height: 50px;
+                margin-right: 20px;
+            }
+            .article-img-intro {
+                margin-bottom: 10px;
+                span {
+                    color: $theme-grey2;
+                }
+                h5:hover,
+                a:hover {
+                    color: $theme-green;
+                }
+                .up {
+                    float: left;
+                }
+                i {
+                    float: right;
+                    vertical-align: bottom;
+                    font-size: 12px;
+                    color: $theme-grey2;
+                }
+            }
+            .active {
+                display: block;
+            }
+            p+p {
+                margin-top: 13px;
+            }
+            p {
+                overflow: hidden;
+                height: 16px;
+                line-height: 20px;
+            }
+            p:hover {
+                color: $theme-green;
+            }
+            .view-more {
+                position: absolute;
+                bottom: 0;
+                display: inline-block;
+                height: 28px;
+                width: 260px;
+                line-height: 28px;
+                text-align: center;
+                border-radius: 4px;
+                background-color: $theme-grey;
+            }
+            .view-more:hover {
+                background-color: rgb(228, 228, 228);
+            }
+        }
+    }
+}
+
+// }
