--- a/acfun.scss
+++ b/acfun.scss
@@ -354,9 +354,14 @@ header {
             width: 40px;
             vertical-align: middle;
         }
-        i {
-            font-style: inherit;
-            margin-left: 5px;
+        a {
+            i {
+                font-style: inherit;
+                margin-left: 5px;
+            }
+        }
+        a:hover {
+            color: $theme-red;
         }
         b {
             margin-left: 10px;
@@ -415,9 +420,14 @@ header {
                 width: 40px;
                 vertical-align: middle;
             }
-            i {
-                font-style: inherit;
-                margin-left: 5px;
+            a {
+                i {
+                    font-style: inherit;
+                    margin-left: 5px;
+                }
+            }
+            a:hover {
+                color: $theme-red;
             }
             b {
                 margin-left: 10px;
@@ -458,7 +468,6 @@ header {
                     img {
                         width: 160px;
                         height: 90px;
-                        vertical-align: top;
                     }
                     h4 {
                         height: 20px;
@@ -505,6 +514,11 @@ header {
         img {
             width: 40px;
             vertical-align: middle;
+        }
+        h2 {
+            a:hover {
+                color: $theme-red;
+            }
         }
         .article-type {
             margin-top: 7px;
@@ -574,129 +588,265 @@ header {
 }
 
 .entertainment {
-    .column-left {
-        float: left;
-        width: 700px;
-        margin-top: 40px;
-        h2 {
-            img {
-                vertical-align: middle;
-                width: 40px;
-            }
-            span {
-                margin-left: 10px;
-            }
-            button {
-                padding: 2px 6px;
-                border: 1px solid $theme-grey2;
-                border-radius: 4px;
-                margin-left: 10px;
-                background-color: #fff;
-                vertical-align: middle;
-            }
-            button:hover {
-                background-color: $theme-grey;
-            }
-            .title-right {
-                font-size: 12px;
-                float: right;
-                margin-top: 10px;
-                a {
-                    cursor: pointer;
-                    margin-right: 10px;
-                }
-                a:hover {
-                    color: $theme-red;
-                }
-                .more {
-                    color: $theme-red;
-                }
-            }
+    // .column-left {
+    //     float: left;
+    //     width: 700px;
+    //     margin-top: 40px;
+    //     h2 {
+    //         img {
+    //             vertical-align: middle;
+    //             width: 40px;
+    //         }
+    //         span {
+    //             margin-left: 10px;
+    //         }
+    //         button {
+    //             padding: 2px 6px;
+    //             border: 1px solid $theme-grey2;
+    //             border-radius: 4px;
+    //             margin-left: 10px;
+    //             background-color: #fff;
+    //             vertical-align: middle;
+    //         }
+    //         button:hover {
+    //             background-color: $theme-grey;
+    //         }
+    //         .title-right {
+    //             font-size: 12px;
+    //             float: right;
+    //             margin-top: 10px;
+    //             a {
+    //                 cursor: pointer;
+    //                 margin-right: 10px;
+    //             }
+    //             a:hover {
+    //                 color: $theme-red;
+    //             }
+    //             .more {
+    //                 color: $theme-red;
+    //             }
+    //         }
+    //     }
+    //     .video-list {
+    //         margin-left: -20px;
+    //         margin-top: -20px;
+    //         li {
+    //             float: left;
+    //             margin-left: 20px;
+    //             margin-top: 20px;
+    //             width: 160px;
+    //             img {
+    //                 vertical-align: top;
+    //                 width: 160px;
+    //                 height: 90px;
+    //                 cursor: pointer;
+    //             }
+    //             h4 {
+    //                 position: relative;
+    //                 overflow: hidden;
+    //                 cursor: pointer;
+    //                 margin-top: 5px;
+    //                 i {
+    //                     font-size: 12px;
+    //                 }
+    //                 b {
+    //                     font-size: 12px;
+    //                     margin-left: 40px;
+    //                 }
+    //             }
+    //             p {
+    //                 width: 160px;
+    //                 margin-top: 5px;
+    //                 position: absolute;
+    //                 background-color: #fff;
+    //                 bottom: 0;
+    //                 color: $theme-grey2;
+    //                 transition: all .5s;
+    //             }
+    //             h4:hover {
+    //                 color: $theme-red;
+    //                 p {
+    //                     bottom: -20px;
+    //                 }
+    //             }
+    //         }
+    //         .first-video {
+    //             width: 340px;
+    //             img {
+    //                 width: 340px;
+    //                 height: 240px;
+    //                 vertical-align: top;
+    //             }
+    //             p {
+    //                 position: static;
+    //                 margin-top: 2px;
+    //             }
+    //         }
+    //     }
+    // }
+    // .column-right {
+    //     float: right;
+    //     width: 260px;
+    //     margin-top: 50px;
+    //     margin-left: 20px;
+    //     .entertainment-rank {
+    //         position: relative;
+    //         .rank-type {
+    //             position: relative;
+    //             ul {
+    //                 position: absolute;
+    //                 top: 3px;
+    //                 right: 0;
+    //                 li {
+    //                     float: left;
+    //                     padding: 2px 10px;
+    //                     cursor: pointer;
+    //                 }
+    //                 .active {
+    //                     color: $theme-red;
+    //                     background-color: rgb(248, 231, 232);
+    //                 }
+    //             }
+    //         }
+    //         .active {
+    //             display: block;
+    //         }
+    //     }
+    // }
+}
+
+.column-left {
+    float: left;
+    width: 700px;
+    margin-top: 40px;
+    h2 {
+        img {
+            vertical-align: middle;
+            width: 40px;
         }
-        .video-list {
-            margin-left: -20px;
-            margin-top: -20px;
-            li {
-                float: left;
-                margin-left: 20px;
-                margin-top: 20px;
-                width: 160px;
-                img {
-                    vertical-align: top;
-                    width: 160px;
-                    height: 90px;
-                    cursor: pointer;
-                }
-                h4 {
-                    position: relative;
-                    overflow: hidden;
-                    cursor: pointer;
-                    margin-top: 5px;
-                    i {
-                        font-size: 12px;
-                    }
-                    b {
-                        font-size: 12px;
-                        margin-left: 40px;
-                    }
-                }
-                p {
-                    width: 160px;
-                    margin-top: 5px;
-                    position: absolute;
-                    background-color: #fff;
-                    bottom: 0;
-                    color: $theme-grey2;
-                    transition: all .5s;
-                }
-                h4:hover {
-                    color: $theme-red;
-                    p {
-                        bottom: -20px;
-                    }
-                }
+        a {
+            margin-left: 10px;
+        }
+        a:hover {
+            color: $theme-red;
+        }
+        button {
+            padding: 2px 6px;
+            border: 1px solid $theme-grey2;
+            border-radius: 4px;
+            margin-left: 10px;
+            background-color: #fff;
+            vertical-align: middle;
+        }
+        button:hover {
+            background-color: $theme-grey;
+        }
+        .title-right {
+            font-size: 12px;
+            float: right;
+            margin-top: 10px;
+            a {
+                cursor: pointer;
+                margin-right: 10px;
             }
-            .first-video {
-                width: 340px;
-                img {
-                    width: 340px;
-                    height: 240px;
-                    vertical-align: top;
-                }
-                p {
-                    position: static;
-                    margin-top: 2px;
-                }
+            a:hover {
+                color: $theme-red;
+            }
+            .more {
+                color: $theme-red;
             }
         }
     }
-    .column-right {
-        float: right;
-        width: 260px;
-        margin-top: 50px;
-        margin-left: 20px;
-        .entertainment-rank {
-            position: relative;
-            .rank-type {
+    .video-list {
+        margin-left: -20px;
+        margin-top: -20px;
+        li {
+            float: left;
+            margin-left: 20px;
+            margin-top: 20px;
+            width: 160px;
+            img {
+                vertical-align: top;
+                width: 160px;
+                height: 90px;
+                cursor: pointer;
+            }
+            h4 {
                 position: relative;
-                ul {
-                    position: absolute;
-                    top: 3px;
-                    right: 0;
-                    li {
-                        float: left;
-                        padding: 2px 10px;
-                        cursor: pointer;
-                    }
-                    .active {
-                        color: $theme-red;
-                        background-color: rgb(248, 231, 232);
-                    }
+                overflow: hidden;
+                cursor: pointer;
+                margin-top: 5px;
+                i {
+                    font-size: 12px;
+                }
+                b {
+                    font-size: 12px;
+                    margin-left: 40px;
                 }
             }
-            .active {
-                display: block;
+            p {
+                width: 160px;
+                margin-top: 5px;
+                position: absolute;
+                background-color: #fff;
+                bottom: 0;
+                color: $theme-grey2;
+                transition: all .5s;
             }
+            h4:hover {
+                color: $theme-red;
+                p {
+                    bottom: -20px;
+                }
+            }
+        }
+        .first-video {
+            width: 340px;
+            img {
+                width: 340px;
+                height: 240px;
+                vertical-align: top;
+            }
+            p {
+                position: static;
+                width: 340px;
+                margin-top: 2px;
+            }
+        }
+    }
+}
+
+.column-right {
+    float: right;
+    width: 260px;
+    margin-top: 50px;
+    margin-left: 20px;
+    .rank {
+        position: relative;
+        .rank-type {
+            position: relative;
+            h2 {
+                a:hover {
+                    color: $theme-red;
+                }
+            }
+            ul {
+                position: absolute;
+                top: 3px;
+                right: 0;
+                li {
+                    float: left;
+                    padding: 2px 10px;
+                    cursor: pointer;
+                }
+                .active {
+                    color: $theme-red;
+                    background-color: rgb(248, 231, 232);
+                }
+            }
+        }
+        .active {
+            display: block;
         }
     }
 }
@@ -731,6 +881,9 @@ header {
         h5 {
             height: 20px;
             overflow: hidden;
+        }
+        p {
+            color: $theme-grey2;
         }
         i {
             float: left;
